# mstatquery

./: README.md  pyproject.toml
mstatquery/: __init__.py  __main__.py  cli.py  lib.py  query.py
